[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cars/araba4.gd" type="Script" id=1]
[ext_resource path="res://Cars/patianceMeter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/city_cars_2.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.31828
height = 35.9975

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.7777
height = 65.2606

[node name="Araba4" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="city_cars_2" type="Sprite" parent="."]
position = Vector2( -0.5, -7.35961 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 6.74251, 43.9397, 46.6499, 19.7909 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.198471, 0.0865631 )
rotation = 1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.996506, -6.84091 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PatianceMeter" parent="." instance=ExtResource( 2 )]
max_value = 5.0

[node name="Timer2" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
